# DeepLearningProject

./: .gitignore  Baselines.ipynb  README.md  RoBERTa_LoRA.ipynb  TFIDF.ipynb  pyproject.toml  results.md
latex/: milestone_report.aux  milestone_report.bbl  milestone_report.fdb_latexmk  milestone_report.fls  milestone_report.tex
latex/Detecting_LLM_Generated_Student_Essays_withTransformer_Fine_Tuning_and_Robustness_Analysis/: iclr2025_conference.sty
latex/Final Report/: final_report.aux  final_report.fdb_latexmk  final_report.fls  final_report.out  final_report.tex  iclr2025_conference.sty
latex/milestone report/: milestone_refs.bib  milestone_report.blg  milestone_report.out
latex/milestone report/Detecting_LLM_Generated_Student_Essays_withTransformer_Fine_Tuning_and_Robustness_Analysis/: milestone_report.tex  references.bib
